--- a/scripts/pairs_experiment/results_visualization_masking_evaluation.ipynb
+++ b/scripts/pairs_experiment/results_visualization_masking_evaluation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,10 +43,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_set_directory = \"../../test_set_distribution\" # Path to the directory containing embeddings from test set\n",
-    "batch_directories = [\"../../single_anchor_output\"] # List of directories containing embeddings from examperiment\n",
-    "# batch_directories = [\"../../2_or_more_anchors_output\"]\n",
-    "# batch_directories = [\"../../no_restrictions_output\"]\n",
+    "test_set_directory = \"../../results_pairs_experiment/test_set_distribution\" # Path to the directory containing embeddings from test set\n",
+    "batch_directories = [\"../../results_pairs_experiment/single_anchor_output\"] # List of directories containing embeddings from examperiment\n",
+    "# batch_directories = [\"../../results_pairs_experiment/2_or_more_anchors_output\"]\n",
+    "# batch_directories = [\"../../results_pairs_experiment/no_restrictions_output\"]\n",
     "embeddings = []\n",
     "targets = []\n",
     "predictions = []\n",
@@ -78,29 +78,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Total number of predictions:  517\n",
-      "\n",
-      "No Masking difference: 2.805233081763095\n",
-      "\n",
-      "Zero features difference: 2.083862246408684\n",
-      "\n",
-      "CremLinker difference: 1.6843346080328399\n",
-      "Successs rate for CremLinker:  0.8781431334622823\n",
-      "Number of successes for CremLinker:  454\n",
-      "\n",
-      "DiffLinker difference: 1.8122913512911893\n",
-      "Successs rate for DiffLinker:  0.6711798839458414\n",
-      "Number of successes for DiffLinker:  347\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "org_difference = []\n",
     "masked_difference = []\n",
@@ -146,29 +126,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Embeddings before undersampling:\n",
-      "Target 0 (Original): 1990 embeddings\n",
-      "Target 1 (PubChem): 1276 embeddings\n",
-      "Target 2 (Zero features): 1276 embeddings\n",
-      "Target 3 (Crem): 278251 embeddings\n",
-      "Target 4 (DiffLinker): 12076 embeddings\n",
-      "\n",
-      "Embeddings after undersampling:\n",
-      "Target 0 (Original): 1990 embeddings\n",
-      "Target 1 (PubChem): 1276 embeddings\n",
-      "Target 2 (Zero features): 1276 embeddings\n",
-      "Target 3 (Crem): 1276 embeddings\n",
-      "Target 4 (DiffLinker): 1276 embeddings\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"Embeddings before undersampling:\")\n",
     "unique_targets, counts = np.unique(targets, return_counts=True)\n",
@@ -211,23 +171,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Wasserstein distance between Original and PubChem: 3.0349390643563314\n",
-      "Wasserstein distance between Original and Zero features: 48.73353172938702\n",
-      "Wasserstein distance between Original and Crem: 3.591130422230202\n",
-      "Wasserstein distance between Original and DiffLinker: 12.031167965567617\n",
-      "Wasserstein distance between PubChem and Zero features: 49.708363867572075\n",
-      "Wasserstein distance between PubChem and Crem: 1.6396354783244649\n",
-      "Wasserstein distance between PubChem and DiffLinker: 9.608704334212502\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "original_embeddings = embeddings[targets == 0]\n",
     "pubchem_embeddings = embeddings[targets == 1]\n",
@@ -247,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -422,7 +368,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.14"
   }
  },
  "nbformat": 4,
